// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput renders correctly for empty results 1`] = `
<div>
  <TextField
    InputProps={
      Object {
        "endAdornment": <pure(SearchRoundedIcon) />,
      }
    }
    className="input-search"
    fullWidth={true}
    label="Busque por alunos, professores e filiais"
    onBlur={[Function]}
    onChange={[Function]}
    required={false}
    select={false}
    value=""
    variant="standard"
  />
</div>
`;

exports[`SearchInput renders correctly for existing results 1`] = `
<div>
  <TextField
    InputProps={
      Object {
        "endAdornment": <pure(SearchRoundedIcon) />,
      }
    }
    className="input-search"
    fullWidth={true}
    label="Busque por alunos, professores e filiais"
    onBlur={[Function]}
    onChange={[Function]}
    required={false}
    select={false}
    value=""
    variant="standard"
  />
  <div
    className="results"
  >
    <SearchResultItem
      action={[Function]}
      description="Professor de Geografia"
      key="Osnir"
      name="Osnir"
    />
    <SearchResultItem
      action={[Function]}
      description="Filial da Tijuca"
      key="Tijuca"
      name="Tijuca"
    />
  </div>
</div>
`;
